--- a/literature.html
+++ b/literature.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accounting (0452) - Grade Distribution</title>
+    <title>Literature - Grade Distribution</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <h2>Accounting (0452) - Grade Distribution</h2>
+    <h2>Literature - Grade Distribution</h2>
     <div id="chart-container"></div>
     <div id="component-toggles"></div>
     <div class="tooltip"></div>
